2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_uuid): Fix a memory leak.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_uuid): Make uppercase to match Linux.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix symlink handling on iso9660.

	* grub-core/fs/iso9660.c (grub_fshelp_node): Remove dir_off. Add symlink
	All users updated.
	(grub_iso9660_susp_iterate): Accept zero-size iterate.
	(grub_iso9660_read_symlink): Moved most of code ...
	(grub_iso9660_iterate_dir): ... here. Fill node->symlink.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsd.c (grub_netbsd_add_boot_disk_and_wedge):
	Use union to avoid breaking strict-aliasing rules.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Support multi-extent iso files.

	* grub-core/fs/iso9660.c (grub_iso9660_data): Remove first_sector.
	Add node.
	(grub_fshelp_node): Revamp. All users updated.
	(FLAG_*): New enum.
	(read_node): New function.
	(grub_iso9660_susp_iterate): Use read_node. Receive a node as argument.
	All users updated.
	(grub_iso9660_mount): Don't attempt to read sua when there is none.
	(get_node_size): New function.
	(grub_iso9660_iterate_dir): Use read_node. Agglomerate multi-extent
	entries.
	Fix memory leak on . and ..
	(grub_iso9660_read): Use read_node.
	(grub_iso9660_close): Free node.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix tar 4G limit and handle paths containing dot.

	* grub-core/fs/cpio.c (grub_cpio_data): Use grub_off_t for offsets.
	(canonicalize): New function.
	(grub_cpio_find_file): Use canonicalize. Store offs in
	grub_disk_addr_t.
	(grub_cpio_dir): Use grub_disk_addr_t.
	(grub_cpio_open): Likewise.

2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of uncompressed blocks on squashfs and break 4G limit.

	* grub-core/fs/squash4.c (grub_squash_super): Add block_size. Remove
	unused flags.