@@ -1,5 +1,13 @@
 2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Read label on HFS+.
+
+	* grub-core/fs/hfsplus.c (grub_hfsplus_cmp_catkey_id): New function.
+	(grub_hfsplus_btree_search): Fix types.
+	(grub_hfsplus_label): Implement.
+
+2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/ntfs.c (grub_ntfs_uuid): Fix a memory leak.
 
 2011-10-25  Vladimir Serbinenko  <phcoder@gmail.com>
